--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Python Learning Hub - Simple notes, examples, and games</title>
+    <title>MIT/ITE-Fundamentals of Programming - MIT/ITE 1213</title>
     <meta name="description" content="Learn Python programming with interactive tutorials, code examples, quizzes, and visual flowcharts. Master data types, operators, loops, functions, arrays, and NumPy.">
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
